Added dynamic channel capacity management

--- a/plugin-multi-call-handling/package.json
+++ b/plugin-multi-call-handling/package.json
@@ -6,10 +6,11 @@
     "postinstall": "flex-plugin pre-script-check"
   },
   "dependencies": {
+    "@k88/pipe-compose": "^2.2.0",
     "async-mutex": "^0.2.3",
+    "flex-plugin-scripts": "4.3.18-beta.0",
     "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "flex-plugin-scripts": "4.3.14-beta.0"
+    "react-dom": "16.5.2"
   },
   "devDependencies": {
     "@twilio/flex-ui": "^1"
