--- a/plugin-shared-services/package.json
+++ b/plugin-shared-services/package.json
@@ -1,14 +1,13 @@
 {
   "name": "plugin-shared-services",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "postinstall": "flex-plugin pre-script-check"
   },
   "dependencies": {
-    "@k88/pipe-compose": "^2.2.0",
     "async-mutex": "^0.2.4",
-    "flex-plugin-scripts": "^4.3.18-beta.0",
+    "flex-plugin-scripts": "^4.1.0",
     "react": "16.5.2",
     "react-dom": "16.5.2"
   },
